--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<head th:fragment="header(title)">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>[[${title}]]</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
+    <script type="text/javascript" th:src="@{/webjars/jquery/3.7.1/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.min.js}"></script>
 </head>
 <body>
+
 <th th:fragment="header_sort(fieldName, headerTitle)">
     <a class="text-white text-decoration-none"
        th:href="@{'/users/page/' + ${currentPage}
@@ -17,10 +24,15 @@
           th:class="${sortOrder == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
 </th>
 
-<a th:fragment="paging(pageNumber, btnValue)" class="page-link"
-   th:href="@{'/users/page/' + pageNumber + '?sortField=' + ${sortField} + '&sortOrder=' + ${sortOrder}
+<a th:fragment="paging_link(pageNumber, btnValue)" class="page-link"
+   th:href="@{'/users/page/' + ${pageNumber} + '?sortField=' + ${sortField} + '&sortOrder=' + ${sortOrder}
 						   + ${keyword != null ? '&keyword=' + keyword : ''} }">
-    [[${btnValue}}]]
+    [[${btnValue}]]
 </a>
+
+<div th:fragment="footer" class="text-center">
+    <p>Shopme Control Panel - Copyright &copy; Shopme</p>
+</div>
+
 </body>
 </html>
