refactor code & responsive design

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: header(${pageTitle})">
+<head th:replace="fragments :: page_header(${pageTitle})">
 </head>
 <body>
 	<div class="container-fluid">
