--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="header(title)">
+<head th:fragment="page_header(title)">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>[[${title}]]</title>
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<th th:fragment="header_sort(fieldName, headerTitle)">
+<th th:fragment="header_sort(fieldName, headerTitle, removeTag)" th:remove="${removeTag}">
     <a class="text-white text-decoration-none"
        th:href="@{'/users/page/' + ${currentPage}
                                  + '?sortField=' + ${fieldName}
@@ -29,6 +29,30 @@
 						   + ${keyword != null ? '&keyword=' + keyword : ''} }">
     [[${btnValue}]]
 </a>
+
+<div th:fragment="disable_user" th:remove="tag">
+    <a th:if="${user.enabled == true}" class="fa-solid fa-circle-check fa-lg icon-green me-1"
+       th:href="@{'/users/' + ${user.id} + '/enabled/false'}"
+       title="Disable this user"></a>
+    <a th:if="${user.enabled == false}" class="fa-solid fa-circle-check fa-lg icon-dark" me-1
+       th:href="@{'/users/' + ${user.id} + '/enabled/true'}"
+       title="Enable this user"></a>
+</div>
+
+<div th:fragment="edit_user" th:remove="tag">
+    <a class="fa-regular fa-pen-to-square fa-lg icon-green me-1"
+       th:href="@{'/users/edit/' + ${user.id}}"
+       title="Edit this user">
+    </a>
+</div>
+
+<div th:fragment="delete_user" th:remove="tag">
+    <a class="fa-solid fa-trash fa-lg icon-red link-delete"
+       th:href="@{'/users/delete/' + ${user.id}}"
+       th:userId="${user.id}"
+       title="Delete this user">
+    </a>
+</div>
 
 <div th:fragment="footer" class="text-center">
     <p>Shopme Control Panel - Copyright &copy; Shopme</p>
