--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <body>
 <div th:fragment="page_menu">
+  <form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+    <input type="submit" />
+  </form>
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <a class="navbar-brand" th:href="@{/}">
       <img th:src="@{/images/ShopmeAdminSmall.png}" />
@@ -43,6 +47,16 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{/settings}">Settings</a>
+        </li>
+        <li>
+          <span class="fa-solid fa-user fa-lg icon-dark"></span>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" sec:authentication="principal.fullname"
+             id="dropdownMenuButton1" data-bs-toggle="dropdown"></a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="" id="logoutLink">Logout</a>
+          </div>
         </li>
       </ul>
     </div>
