--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
@@ -98,7 +98,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="text-center"th:replace="fragments :: footer">
+		<div th:replace="~{fragments :: footer}">
 		</div>
 	</div>
 <script type="text/javascript">
