--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: page_header('Home - Shopme Admin')">
+<head th:replace="fragments :: page_header('Manage Users - Shopme Admin')">
 </head>
 <body>
 	<div class="container-fluid">
@@ -145,7 +145,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="text-center"th:replace="fragments :: footer">
+		<div th:replace="~{fragments :: footer}">
 		</div>
 	</div>
 <script type="text/javascript">
